Added manage IdentityRole, IdentityUser

--- a/src/TicketManagement.MVC/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/src/TicketManagement.MVC/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "DeleteAsync Personal Data";
+    ViewData["Title"] = "Delete Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
