--- a/src/TicketManagement.MVC/Views/Home/Create.cshtml
+++ b/src/TicketManagement.MVC/Views/Home/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TicketManagement.Common.Entities.Event
 @{
-    ViewBag.Title = "Добавление пользователя";
+    ViewBag.Title = "Добавление eventa";
 }
 <form asp-action="create" asp-controller="home">
     <div class="form-group">
