--- a/src/TicketManagement.MVC/Views/Shared/_Layout.cshtml
+++ b/src/TicketManagement.MVC/Views/Shared/_Layout.cshtml
@@ -1,6 +1,9 @@
-﻿@using Microsoft.AspNetCore.Localization
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
+@using TicketManagement.Common.DI;
 
+@inject IAuthorizationService AuthorizationService
 @inject IViewLocalizer Localizer
 
 @{
@@ -30,9 +33,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Event">Privacy</a>
                         </li>
                     </ul>
                     <partial name="_ClockPartial" />
