--- a/src/TicketManagement.MVC/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/TicketManagement.MVC/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -20,6 +20,14 @@
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
+            <div class="form-floating">
+                <input asp-for="Input.FirstName" class="form-control"/>
+                <label asp-for="Input.FirstName" class="form-label"></label>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.SurName" class="form-control" />
+                <label asp-for="Input.SurName" class="form-label"></label>
+            </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
         </form>
     </div>
