--- a/src/TicketManagement.MVC/Views/Home/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/Home/Index.cshtml
@@ -1,68 +1,68 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.DI;
+@using TicketManagement.Common.DI
+@using TicketManagement.MVC.Helpers
 
 @inject IAuthorizationService AuthorizationService
 @inject IServiceProvider ServiceProvider
 @inject IViewLocalizer Localizer
 
-@{
-    ViewData["Title"] = @Localizer["Home Page"];
-}
-
 @model IEnumerable<TicketManagement.Common.DI.IEvent>
+
 @{
-    ViewBag.Title = @Localizer["General page"];
+    ViewBag.Title = @Localizer["Home Page"];
 }
 
 @if ((await AuthorizationService.AuthorizeAsync(User, "Administrator")).Succeeded)
 {
     <div class="text-center">
         <h1 class="display-4">@Localizer["Welcome"]</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     </div>
 }
 
-<a asp-action="Create">@Localizer["Add Event"]</a>
 <div class="row">
-    <table class="table">
-        @foreach (var item in Model)
+    @Html.Raw($"<table class='table'>")
+    @foreach (var evnt in Model)
+    {
+        if ((evnt.Id % 2) != default)
         {
-
-            if ((item.Id % 2) != default)
-            {
-                @Html.Raw("<tr>")
-                ;
-            }
-            <td>
-                <div class="img__container">
-                    <img class="image shadow-lg" alt="" src="@Url.Content(item.EventLogoImage)" />
-                    <div class="img__description">
-                        <a asp-action="Create" class="image">
-                            <div class="img__header"><h2 style="text-decoration: none;">@item.Name</h2></div>
-                            <div class="text">
-                                <div class="left">
-                                    <p>@item.Description</p>
-                                </div>
-                                <div class="right">
-                                    <p>@(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsAvailableCountAsync(item.Id)) / @(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsCountAsync(item.LayoutId))</p>
-                                </div>
-                            </div>
-                            <div class="text">
-                                <div class="right">
-                                    <p style="font-size: 0.75em;">@Localizer["Avalaible"]</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </td>
-            if ((item.Id % 2) == default || (item.Id == Model.Count() && (item.Id % 2) != default))
-            {
-                @Html.Raw("</tr>")
-                ;
-            }
+            @Html.Raw("<tr>")
         }
-    </table>
+        @Html.Raw("<td>")
+        <form id="@Html.Raw("seat"+evnt.Id)" asp-controller="Event"
+          asp-action="Index" asp-route-eventId="@evnt.Id"
+          method="post" class="form-horizontal" role="form">
+            <div class="img__container">
+                <img class="image shadow-lg" alt="" src="@Url.Content(evnt.EventLogoImage)" />
+                <div class="img__description">
+                    <a class="image" asp-action="Index" asp-controller="Event" asp-route-eventId="@evnt.Id">
+                        <div class="text">
+                            <div class="img__header left"><h2 style="text-decoration: none;">@evnt.Name</h2></div>
+                            <div class="img__header right" style="font-size: 0.75em;">@Html.ModifyDateTime(evnt.EventTime)</div>
+                        </div>
+                        <div class="text">
+                            <div class="left">
+                                <p>@evnt.Description</p>
+                            </div>
+                            <div class="right">
+                                <p>@(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsAvailableCountAsync(evnt.Id)) / @(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsCountAsync(evnt.LayoutId))</p>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <div class="right">
+                                <p style="font-size: 0.75em;">@Localizer["Avalaible"]</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </form>
+        @Html.Raw("</td>")
+        if ((evnt.Id % 2) == default || (evnt.Id == Model.Count() && (evnt.Id % 2) != default))
+        {
+            @Html.Raw("</tr>")
+        }
+    }
+    @Html.Raw("</table>")
 </div>
 
