--- a/src/TicketManagement.MVC/Views/Shared/_Layout.cshtml
+++ b/src/TicketManagement.MVC/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                         </li>
                     </ul>
                     <partial name="_ClockPartial" />
+                    <partial name="_MenuPartial" />
                     <partial name="_LoginPartial" />
                 </div>
             </div>
