--- a/src/TicketManagement.MVC/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/src/TicketManagement.MVC/Views/Shared/_SelectLanguagePartial.cshtml
@@ -12,7 +12,7 @@
     var culturesList = LocalizationOptions.Value.SupportedUICultures
         ?.Select(c => new SelectListItem { Value = c.Name, Text = c.DisplayName })
         .ToList();
-    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
+    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}" + Context.Request.QueryString.ToString();
 }
 
 <form id="selectLanguage" asp-controller="Home"
