--- a/src/TicketManagement.MVC/Views/UserManagement/ChangeRole.cshtml
+++ b/src/TicketManagement.MVC/Views/UserManagement/ChangeRole.cshtml
@@ -14,5 +14,5 @@
                    @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") />@role.Name <br />
         }
     </div>
-    <button type="submit" class="btn btn-primary">Ok</button>
+    <button type="submit" class="btn btn-primary">Change</button>
 </form>
