--- a/src/TicketManagement.MVC/Views/_ViewImports.cshtml
+++ b/src/TicketManagement.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TicketManagement.MVC
 @using TicketManagement.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TicketManagement.MVC
