Added Event Management, updated stored procedures for Event

--- a/src/TicketManagement.MVC/Views/Event/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/Event/Index.cshtml
@@ -51,7 +51,7 @@
                     <div class="text">
                         <div class="container">
                             <div class="container text-right">
-                                @await Html.PartialAsync("_SelectEventSeat",item)
+                                @await Html.PartialAsync("_SelectEventSeatPartial",item)
                             </div>
                         </div>
 
