--- a/src/TicketManagement.MVC/Views/EventManagement/SelectLayouts.cshtml
+++ b/src/TicketManagement.MVC/Views/EventManagement/SelectLayouts.cshtml
@@ -3,34 +3,26 @@
 
 @inject IViewLocalizer Localizer
 
-@model IEnumerable<IVenue>
+@model IEnumerable<ILayout>
 
 @{
-    ViewData["Title"] = Localizer["Event Management"];
+    ViewData["Title"] = Localizer["Select layout"];
 }
 
 <div class="form-group">
     <div class="wrap">
         <div class="left">
             <table class="table">
-                <tr><th>Name</th><th>Description</th><th>Address</th><th>Phone</th></tr>
-                @foreach (var venue in Model)
+                <tr><th>Name</th><th>Description</th></tr>
+                @foreach (var layout in Model)
                 {
                     <tr>
                         <td>
-                            @venue.Name;
+                            @layout.Name;
                             <br />
                         </td>
                         <td>
-                            @venue.Description;
-                            <br />
-                        </td>
-                        <td>
-                            @venue.Address;
-                            <br />
-                        </td>
-                        <td>
-                            @venue.Phone;
+                            @layout.Description;
                             <br />
                         </td>
                     </tr>
@@ -41,12 +33,12 @@
                 <tr><th></th></tr>
                 <tr>
                     <td>
-                        <form asp-action="SelectLayouts" asp-controller="EventManagement" method="post">
+                        <form asp-action="CreateEvent" asp-controller="EventManagement" method="post">
                             <input type="hidden" />
                             <div class="table-active">
-                                @foreach (var venue in Model)
+                                @foreach (var layout in Model)
                                 {
-                                    <input type="checkbox" name="venuesId" value="@venue.Id" />
+                                    <input type="checkbox" name="layoutsId" value="@layout.Id" />
                                     <hr />
                                 }
                             </div>
