Changed Venue Management, Event Management

--- a/src/TicketManagement.MVC/Views/Event/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/Event/Index.cshtml
@@ -7,7 +7,7 @@
 @inject IServiceProvider ServiceProvider
 @inject IViewLocalizer Localizer
 
-@model IEnumerable<TicketManagement.Common.DI.IEventArea>
+@model IEnumerable<IEventArea>
 
 @{
     ViewData["Title"] = Localizer["EventPage"];
