--- a/src/TicketManagement.MVC/Views/EventManagement/EditEvent.cshtml
+++ b/src/TicketManagement.MVC/Views/EventManagement/EditEvent.cshtml
@@ -41,7 +41,7 @@
                 <tr><th></th></tr>
                 <tr>
                     <td>
-                        <form asp-action="SelectLayouts" asp-controller="EventManagement" method="post">
+                        <form asp-action="SelectLayoutsEdit" asp-controller="EventManagement" method="post">
                             <input type="hidden" />
                             <div class="table-active">
                                 @foreach (var venue in Model)
