--- a/src/TicketManagement.MVC/Views/EventManagement/SelectLayouts.cshtml
+++ b/src/TicketManagement.MVC/Views/EventManagement/SelectLayouts.cshtml
@@ -33,7 +33,7 @@
                 <tr><th></th></tr>
                 <tr>
                     <td>
-                        <form asp-action="CreateEvent" asp-controller="EventManagement" method="post">
+                        <form asp-action="InsertEvent" asp-controller="EventManagement" method="post">
                             <input type="hidden" />
                             <div class="table-active">
                                 @foreach (var layout in Model)
