--- a/src/TicketManagement.MVC/Views/UserManagement/Create.cshtml
+++ b/src/TicketManagement.MVC/Views/UserManagement/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model TicketManagement.Common.Identity.CreateUser
+﻿@using TicketManagement.Common.Identity
+@model CreateUser
 
 @{
     ViewBag.Title = "Add user";
