--- a/src/TicketManagement.MVC/Views/UserManagement/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/UserManagement/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TicketManagement.Common.Identity.User>
+﻿@using TicketManagement.Common.Identity
+@model IEnumerable<User>
 @{
     ViewBag.Title = "Manage users";
 }
