--- a/src/TicketManagement.MVC/Views/UserManagement/Edit.cshtml
+++ b/src/TicketManagement.MVC/Views/UserManagement/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TicketManagement.Common.Identity.CreateUser
+﻿@using TicketManagement.Common.Identity
+@model CreateUser
 
 @{
     ViewBag.Title = "Edit user";
@@ -26,6 +27,10 @@
     <div class="form-group">
         <label asp-for="SurName" class="control-label">SurName</label>
         <input type="text" asp-for="SurName" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="PhoneNumber" class="control-label">PhoneNumber</label>
+        <input type="text" asp-for="PhoneNumber" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="PhoneNumber" class="control-label">PhoneNumber</label>
