--- a/src/TicketManagement.MVC/Views/VenueManagement/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/VenueManagement/Index.cshtml
@@ -1,4 +1,26 @@
-﻿<h1>Secured Zone</h1>
+﻿@using TicketManagement.Common.DI
+@model List<IVenue>
+@{
+    ViewBag.Title = "Venue Manage";
+}
 
-<partial name="_Menu"/>
-<partial name="_UserInfo"/>
+<table class="table">
+    <tr><th>Id</th><th>Name</th><th>Description/th><th>Address</th><th>Phone</th><th></th><th></th></tr>
+    @foreach (var venue in Model)
+    {
+        <tr>
+            <td>@venue.Id</td>
+            <td>@venue.Name</td>
+            <td>@venue.Description</td>
+            <td>@venue.Address</td>
+            <td>@venue.Phone</td>
+            <td>
+                <form asp-action="Delete" asp-route-id="@venue.Id" method="post">
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@venue.Id">Edit</a>
+                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                </form>
+            </td>
+        </tr>
+    }
+    <tr><a class="btn btn-sm btn-block btn-success" asp-action="Create">Add venue</a></tr>
+</table>
