Refactoring, removed entitys interfaces

--- a/src/TicketManagement.MVC/Views/Event/_SelectEventSeatPartial.cshtml
+++ b/src/TicketManagement.MVC/Views/Event/_SelectEventSeatPartial.cshtml
@@ -4,8 +4,9 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Options
 @using TicketManagement.Common.DI
+@using TicketManagement.Common.Entities
 
-@model IEventArea
+@model EventArea
 
 @inject IViewLocalizer Localizer
 @inject IServiceProvider ServiceProvider
