--- a/src/TicketManagement.MVC/Views/EventManagement/EditEvent.cshtml
+++ b/src/TicketManagement.MVC/Views/EventManagement/EditEvent.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TicketManagement.Common.DI
+@using TicketManagement.Common.Entities
 
 @inject IViewLocalizer Localizer
 
-@model IEnumerable<IVenue>
+@model IEnumerable<Venue>
 
 @{
     ViewData["Title"] = Localizer["Event Management"];
