--- a/src/TicketManagement.MVC/Views/VenueManagement/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/VenueManagement/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using TicketManagement.Common.DI
-@model List<IVenue>
+﻿@using TicketManagement.Common.Entities
+@model List<Venue>
 @{
     ViewBag.Title = "Venue Manage";
 }
