--- a/src/TicketManagement.MVC/Views/Home/Cart.cshtml
+++ b/src/TicketManagement.MVC/Views/Home/Cart.cshtml
@@ -1,11 +1,13 @@
-﻿@using TicketManagement.Common.Identity
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using TicketManagement.Common.Identity
 
-@model TicketManagement.Common.Identity.User
+@model User
 
+@inject IViewLocalizer Localizer
 <tr>
-    <td><h1>To up balance: </h1></td>
+    <td><h1>@Localizer["To up balance:"]</h1></td>
     <td>
-        <form asp-action="GetMoney" asp-controller="Home">
+        <form asp-action="Cart" asp-controller="Home">
             <div class="form-group">
                 <label asp-for="Balance" class="control-label" />
                 <input asp-for="Balance" name="money" class="form-control" />
@@ -17,7 +19,7 @@
     </td>
 </tr>
 
-<h2>Total purchase: @Model.CartCount</h2>
-<h1>Purchase history:</h1>
+<h2>@Localizer["Total purchase:"] @Model.CartCount</h2>
+<h1>@Localizer["Purchase history:"]</h1>
 
 <h7>@Model.PayHistory</h7>
