--- a/src/TicketManagement.MVC/Views/Home/Index.cshtml
+++ b/src/TicketManagement.MVC/Views/Home/Index.cshtml
@@ -7,17 +7,19 @@
 @inject IAuthorizationService AuthorizationService
 @inject IServiceProvider ServiceProvider
 @inject IViewLocalizer Localizer
+@inject IEventService EventService
 
 @model IEnumerable<Event>
 
 @{
     ViewBag.Title = @Localizer["Home Page"];
+    var isManageRole = User.IsInRole("Administrator") || User.IsInRole("EventManager");
 }
 
-@if ((await AuthorizationService.AuthorizeAsync(User, "Administrator")).Succeeded)
+@if (isManageRole)
 {
-    <div class="text-center">
-        <h1 class="display-4">@Localizer["Welcome"]</h1>
+    <div class="text-sm-center">
+        <h5 class="display-4">@Localizer["Total Events:"] @((await EventService.GetAllAsync()).Count())</h5>
     </div>
 }
 
@@ -30,23 +32,22 @@
             @Html.Raw("<tr>")
         }
         @Html.Raw("<td>")
-        <form id="@Html.Raw("seat"+evnt.Id)" asp-controller="Event"
-          asp-action="Index" asp-route-eventId="@evnt.Id"
-          method="post" class="form-horizontal" role="form">
-            <div class="img__container">
-                <img class="image shadow-lg" alt="" src="@Url.Content(evnt.EventLogoImage)" />
-                <div class="img__description">
-                    <a class="image" asp-action="Index" asp-controller="Event" asp-route-eventId="@evnt.Id">
+        <form id="@Html.Raw("evnt"+evnt.Id)" asp-controller="Event" asp-action="Index"
+          asp-route-eventId="@evnt.Id" method="post" class="form-horizontal" role="form">
+            <button type="submit" class="invisible">
+                <div class="img__container visible">
+                    <img class="image shadow-lg" alt="" src="@Url.Content(evnt.EventLogoImage)" />
+                    <div class="img__description">
                         <div class="text">
-                            <div class="img__header left"><h2 style="text-decoration: none;">@evnt.Name</h2></div>
                             <div class="img__header right" style="font-size: 0.75em;">@Html.ModifyDateTime(evnt.EventTime)</div>
+                            <div class="img__header left"><h2 style="text-decoration: none;">@evnt.Name</h2></div>
                         </div>
                         <div class="text">
                             <div class="left">
                                 <p>@evnt.Description</p>
                             </div>
                             <div class="right">
-                                <p>@(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsAvailableCountAsync(evnt.Id)) / @(await ServiceProvider.GetRequiredService<IEventService>().GetSeatsCountAsync(evnt.LayoutId))</p>
+                                <p>@(await EventService.GetSeatsAvailableCountAsync(evnt.Id)) / @(await EventService.GetSeatsCountAsync(evnt.LayoutId))</p>
                             </div>
                         </div>
                         <div class="text">
@@ -54,10 +55,22 @@
                                 <p style="font-size: 0.75em;">@Localizer["Avalaible"]</p>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-            </div>
+            </button>
         </form>
+        @if (isManageRole)
+        {
+            @Html.Raw("<td>")
+            <form asp-action="Delete" asp-controller="EventManagement" asp-route-eventId="@evnt.Id" method="post">
+                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-controller="EventManagement" asp-route-eventId="@evnt.Id">@Localizer["Edit"]</a>
+                @if (await EventService.IsAllAvailableSeatsAsync(evnt.Id))
+                {
+                    <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this event?')" >@Localizer["Delete"]</button>
+                }
+            </form>
+            @Html.Raw("</td>")
+        }
         @Html.Raw("</td>")
         if ((evnt.Id % 2) == default || (evnt.Id == Model.Count() && (evnt.Id % 2) != default))
         {
