--- a/src/TicketManagement.MVC/Views/Shared/_MenuPartial.cshtml
+++ b/src/TicketManagement.MVC/Views/Shared/_MenuPartial.cshtml
@@ -1,34 +1,28 @@
 ﻿@if (User.Identity is not null && User.Identity.IsAuthenticated)
 {
     <ul class="navbar-nav">
-        @if (User.IsInRole("EventManager"))
+        @if (User.IsInRole("EventManager") || User.IsInRole("Administrator"))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="EventManagement" asp-action="CreateEvent" title="Create Event">Create event</a>
-            </li>
-        }
-        @if (User.IsInRole("EventManager"))
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="EventManagement" asp-action="EditEvent" title="Edit Event">Edit Event</a>
-            </li>
-        }
-        @if (User.IsInRole("EventManager"))
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="EventManagement" asp-action="DeleteEvent" title="Delete Event">Delete Event</a>
+                <a class="nav-link text-dark" asp-controller="EventManagement" asp-action="SelectVenues" title="Create Event">Create event</a>
             </li>
         }
         @if (User.IsInRole("Administrator"))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-controller="VenueManagement" asp-action="Index" title="Venue management">Venues manage</a>
+                <a class="nav-link text-dark" asp-controller="AreaManagement" asp-action="Index" title="Areas management">Areas manage</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="LayoutManagement" asp-action="Index" title="Layouts management">Layouts manage</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="VenueManagement" asp-action="Index" title="Venues management">Venues manage</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="UserManagement" asp-action="Index" title="Users management">Users manage</a>
             </li>
         }
-        @if (User.IsInRole("User"))
+        @if (User.IsInRole("User") || User.IsInRole("EventManager") || User.IsInRole("Administrator"))
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Home" asp-action="Cart" asp-action="Index" title="Cart">Cart</a>
