--- a/src/TicketManagement.MVC/Views/Event/_SelectEventSeatPartial.cshtml
+++ b/src/TicketManagement.MVC/Views/Event/_SelectEventSeatPartial.cshtml
@@ -33,7 +33,7 @@
                             <form id="@Html.Raw("seat"+seat.Id)" asp-controller="Event"
               asp-action="Purchase" asp-route-eventSeatId="@seat.Id" asp-route-returnUrl="@returnUrl" asp-route-price="@Model.Price"
               method="post" class="form-horizontal" role="form">
-                                <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to buy this seat?"]@Html.Raw("')")" id="@Html.Raw("btn"+seat.Id)" @((seat.State != default) ? "disabled" : "")>
+                                <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to buy this seat?"]@Html.Raw("')")" id="@Html.Raw("btn"+seat.Id)" @((seat.State != State.Available) ? "disabled" : "") >
                                     <label class="text-sm-start" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Row</label>
                                     @Html.DisplayFor(model => model.Price)
                                     <label class="text-sm-end" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Number</label>
@@ -42,7 +42,7 @@
                     }
                     else
                     {
-                            <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" id="@Html.Raw("btn"+seat.Id)" @((seat.State != default) ? "disabled" : "")>
+                            <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" id="@Html.Raw("btn"+seat.Id)" @((seat.State != State.Available) ? "disabled" : "")>
                                 <label class="text-sm-start" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Row</label>
                                 @Html.DisplayFor(model => model.Price)
                                 <label class="text-sm-end" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Number</label>
@@ -60,7 +60,7 @@
                             <form id="@Html.Raw("seat"+seat.Id)" asp-controller="Event"
               asp-action="Purchase" asp-route-eventSeatId="@seat.Id" asp-route-returnUrl="@returnUrl" asp-route-price="@Model.Price"
               method="post" class="form-horizontal" role="form">
-                                <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to buy this seat?"]@Html.Raw("')")" id="@Html.Raw("btn"+seat.Id)" @((seat.State != default) ? "disabled" : "")>
+                                <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" onclick="@Html.Raw("return confirm('")@Localizer["Are you sure you want to buy this seat?"]@Html.Raw("')")" id="@Html.Raw("btn"+seat.Id)" @((seat.State != State.Available) ? "disabled" : "") >
                                     <label class="text-sm-start" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Row</label>
                                     @Html.DisplayFor(model => model.Price)
                                     <label class="text-sm-end" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Number</label>
@@ -69,7 +69,7 @@
                     }
                     else
                     {
-                            <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" id="@Html.Raw("btn"+seat.Id)" @((seat.State != default) ? "disabled" : "")>
+                            <button class="btn btn-outline-secondary btn-lg btn-block" style="height: 80px;" type="submit" id="@Html.Raw("btn"+seat.Id)" @((seat.State != State.Available) ? "disabled" : "")>
                                 <label class="text-sm-start" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Row</label>
                                 @Html.DisplayFor(model => model.Price)
                                 <label class="text-sm-end" style="font-size: 0.5em; display:table-cell; vertical-align:top;">@seat.Number</label>
